# AckermanR

./: .gitignore  .gitmodules  README.md
agv_control/: CMakeLists.txt  package.xml
agv_control/lib/: serialib.cpp  serialib.h
agv_control/src/: agv_controller.cpp  odom_node.cpp
control_car/: CMakeLists.txt  package.xml
control_car/config/: twist_mux.yaml
control_car/launch/: cmd_vel_mux_launch.py  reactive_methods.launch.py  spawn_robot_world_launch.py
control_car/src/: viewScan.py
control_car/world/: Mapa_parcial  Mapa_parcial_ampliado  Parcial_Wordl_V2  Parcial_World2.world  Parcial_World_V2-1.world  Parcial_world1.world
control_car/world/Mapa1/: model.config  model.sdf
control_car/world/Parcial_World/: model.config  model.sdf
distance_calc/: CMakeLists.txt  package.xml
distance_calc/src/: emergency_break.cpp
emergency_brake/: CMakeLists.txt  package.xml
emergency_brake/src/: eb_node.cpp  slicingTest  slicingTest.cpp
gap_following_pkg/: CMakeLists.txt  package.xml
gap_following_pkg/config/: params.yml
gap_following_pkg/launch/: follow_gap.launch.py
gap_following_pkg/src/: follow_the_gap.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/f1_12th_simulator_g02/share/ament_index/resource_index/package_run_dependencies/: f1_12th_simulator_g02
install/f1_12th_simulator_g02/share/ament_index/resource_index/parent_prefix_path/: f1_12th_simulator_g02
install/f1_12th_simulator_g02/share/f1_12th_simulator_g02/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/f1_12th_simulator_g02/share/f1_12th_simulator_g02/cmake/: f1_12th_simulator_g02Config-version.cmake  f1_12th_simulator_g02Config.cmake
install/f1_12th_simulator_g02/share/f1_12th_simulator_g02/config/: empty.yaml  gazebo_params.yaml  joystick.yaml  mapper_params_online_async.yaml  my_controllers.yaml  twist_mux.yaml
install/f1_12th_simulator_g02/share/f1_12th_simulator_g02/description/: gazebo_control_akerman.xacro  inertial_macros.xacro  lidar.xacro  properties.xacro  robot.urdf.xacro  robot_core.xacro  robot_core_akerman.xacro  ros2_control.xacro  rviz_model.rviz  rviz_view_config.rviz
install/f1_12th_simulator_g02/share/f1_12th_simulator_g02/environment/: ament_prefix_path.dsv  path.dsv
install/f1_12th_simulator_g02/share/f1_12th_simulator_g02/launch/: joystick.launch.py  launch_sim.launch.py  rsp.launch.py
install/f1_12th_simulator_g02/share/f1_12th_simulator_g02/worlds/: BigRoom.world  empty.world
install/f1_12th_simulator_g02/share/f1_12th_simulator_g02/worlds/BigRoom/: model.config  model.sdf
install/f1_12th_simulator_g02/share/f1_12th_simulator_g02/worlds/test_world/: model.config  model.sdf
install/pruebas_py/lib/pruebas_py/: plotter_distancias
install/pruebas_py/share/pruebas_py/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
pruebas_py/: package.xml  setup.cfg  setup.py
pruebas_py/pruebas_py/: plotter_distancias.py
wall_following_pkg/: CMakeLists.txt  package.xml
wall_following_pkg/config/: params.yml
wall_following_pkg/launch/: follow_wall_launch.py
wall_following_pkg/src/: control_node.cpp  follow_gap.cpp  testFindgap.cpp  wall_following_node.cpp
