<?xml version="1.0"?>
<package format="3">
  <name>agv_control</name>
  <version>0.1.0</version>
  <description>AGV Controller</description>
  <maintainer email="duquemigue@gmail.com">Migue</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
